[gd_scene load_steps=7 format=1]

[ext_resource path="res://rfb/rfb_client/rfb_client_gui.gd" type="Script" id=1]
[ext_resource path="res://rfb/rfb_client/main_dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://rfb/rfb_client/options_dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://rfb/rfb_client/open_connection_dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://rfb/rfb_client/connection_state_dialog.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="rfb_client_gui" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 1 )

[node name="main_dialog" parent="." instance=ExtResource( 2 )]

[node name="options_dialog" parent="." instance=ExtResource( 3 )]

visibility/visible = false

[node name="open_connection_dialog" parent="." instance=ExtResource( 4 )]

visibility/visible = false

[node name="connection_state_dialog" parent="." instance=ExtResource( 5 )]

visibility/visible = false


